@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US004

class Owner {

}

class Store {
    ID
    designation
    phoneNumber
    emailAddress
}

class Agent {
    assignedAgency
}

class Property {
    type
    area
    distance
    price
    photographs
}

class CommonCharacteristicsApartmentHouse {
    numberBedrooms
    numberBathrooms
    numberParkingSpaces
    availableEquipment
}

class House {
    existenceBasement
    existenceLoft
    sunExposure
}

class AdvertisementRequest {

}

class SaleAdvertisementRequest {
    totalPrice
}

class RentAdvertisementRequest {
    rentPricePerMonth
}

class Address {
    zipCode
    streetName
    cityName
    district
}

class CommonCharacteristicsPerson {
    name
    citizenCardNumber
    taxNumber
    emailAddress
    phoneNumber
}

note right of Property
    "Type" can be a land, a house or an apartment
end note

Owner "1..*" -- "1" Agent : chooses an >
Owner "0..*" -- "1" Store : chooses a >
Owner "1" - "1" Property : has an <
Owner --|> CommonCharacteristicsPerson

Store "1" - "1..*" Agent : works in <

Property <|-- CommonCharacteristicsApartmentHouse
CommonCharacteristicsApartmentHouse <|-- House

AdvertisementRequest "1..*" -- "1          " Owner : submits <
AdvertisementRequest "1" -- "1" Property : describes >
AdvertisementRequest "1" -- "1..*" Agent : opens <

Address "1..*" -left- "1 " Property : located at <
Address "1 " -- "1" Owner : located at <
Address "1" -- "1" Agent : located at <

Agent -down-|> CommonCharacteristicsPerson

AdvertisementRequest <|-up- SaleAdvertisementRequest
AdvertisementRequest <|-up- RentAdvertisementRequest
@enduml